2012-01-23  Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_manage.pl: Merged from trunk. Fixed mismatch
	arguments call of pandora_create_template_module.

	* lib/PandoraFMS/Core.pm: Merged from trunk. Fixed misleading
	comment of pandora_create_template_module function signature.

2012-01-17  Kikuchi Koichiro <koichiro@rworks.jp>

	* pandora_server.redhat.spec: Merged from trunk. Fixed a wrong
	  dependency. RHEL has a net-snmp-perl, not a perl-SNMP.
	  Also update version string (to 4.0.1).

2012-01-12  Hirofumi Kosaka <kosaka@rworks.jp>

        * util/pandora_manage.pl: Merged from trunk. Added a new option
	  to CLI: Create alert template

2012-01-10  Hirofumi Kosaka <kosaka@rworks.jp>

        *  util/pandora_manage.pl: Added new optional parameters (str_warning and
	   str_critical) for module at creation time.

2012-01-05  Hirofumi Kosaka <kosaka@rworks.jp>

        * lib/PandoraFMS/Core.pm, util/pandora_manage.pl: Merged from trunk.
          Added a new optoins to CLI: Create group

2011-12-14  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl, util/pandora_manage.pl: Updated version strings.

2011-12-13  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control,
	  DEBIAN/make_deb_package.sh,
	  pandora_server.spec,
	  lib/PandoraFMS/Config.pm: Fixed version strings (were wrong
	  in the previous commit).

2011-12-13  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control,
	  DEBIAN/make_deb_package.sh,
	  pandora_server.spec,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/Core.pm: Updated version strings.

2011-12-12  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Tools.pm
	util/pandora_db.pl: Moved is_policy_module function from
	db script to Enteprise and call it through enterprise hook

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandora_server_upgrade: Removed rm of pandora_exec and 
	pandora_server and changed for ln -s commands.
	
	Fixes: #3451305

2011-12-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
