@@ -98,7 +98,7 @@ pluginserver 0
 
 # Pandora FMS Plugin exec tool filepath (by default at /usr/bin)
 
-plugin_exec /usr/bin/pandora_exec
+plugin_exec /usr/bin/timeout
 
 # predictionserver : 1 or 0. Set to 1 to activate prediction server with this setup
 # DISABLED BY DEFAULT 
