@@ -52,10 +52,10 @@ sub new ($$;$) {
 
 	return undef unless $config->{'pluginserver'} == 1;
 
-	# Check for pandora_exec
-	if (system($config->{'plugin_exec'} . ' > /dev/null 2>&1') != 256) {
-		logger ($config, " [E] pandora_exec not found. Plugin Server not started.", 1);
-		print_message ($config, " [E] pandora_exec not found. Plugin Server not started.", 1);
+	# Check for plugin_exec
+	if (! -x $config->{'plugin_exec'}) {
+		logger ($config, ' [E] ' . $config->{'plugin_exec'} . ' not found. Plugin Server not started.', 1);
+		print_message ($config, ' [E] ' . $config->{'plugin_exec'} . ' not found. Plugin Server not started.', 1);
 		return undef;
 	}
 		
@@ -168,9 +168,12 @@ sub data_consumer ($$) {
 	logger ($pa_config, "Executing AM # $module_id plugin command '$command'", 9);
 
 	# Execute command
-	$command = $pa_config->{'plugin_exec'} . ' ' . $timeout . ' ' . quotemeta ($command);
+	$command = $pa_config->{'plugin_exec'} . ' ' . $timeout . ' ' . $command;
 
-	my $module_data = `$command`;
+	my $module_data;
+	eval {
+		$module_data = `$command`;
+	};
 	my $ReturnCode = ($? >> 8) & 0xff;
 
 
